# Agent-autonome-

./: .env.example  .gitignore  GUIDE_TESTS.html  config.yaml  main.py  pyproject.toml  requirements.txt  scheduler.py  tests_etapes.drawio
.claude/: settings.local.json
.streamlit/: config.toml
alerts/: __init__.py  email_alert.py  slack_alert.py
analyzer/: __init__.py  claude_analyzer.py  criticality_scorer.py
dashboard/: app.py
database/: __init__.py  db_manager.py  document_service.py  models.py
scrapers/: __init__.py  anrt_scraper.py  base_scraper.py  bo_scraper.py  cndp_scraper.py  cour_cassation_scraper.py  custom_scraper.py  dgssi_scraper.py  sgg_scraper.py
tests/: test_etape1_scraper.py  test_etape2_scorer.py  test_etape3_database.py  test_etape4_analyzer_mock.py  test_etape5_pipeline.py
