[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veille-juridique-ma"
version = "0.1.0"
description = "Moroccan legal monitoring agent"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*", "analyzer*", "database*", "alerts*", "dashboard*"]
